code cleaning (#3)
* refactor: code cleaning

* refactor: code cleaning 2

* chore: cleaning imports