@@ -16,7 +16,6 @@ import org.bukkit.block.BlockState;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * http://www.voxelwiki.com/minecraft/Voxelsniper#The_Tree_Brush
@@ -107,11 +106,7 @@ public class TreeSnipeBrush extends Brush {
 
     @Override
     public List<String> registerArguments() {
-        List<String> arguments = new ArrayList<>();
-
-        arguments.addAll(Arrays.stream(TreeType.values()).map(e -> e.name()).collect(Collectors.toList()));
-
-        return arguments;
+        return new ArrayList<>(Arrays.stream(TreeType.values()).map(Enum::name).toList());
     }
 
     @Override
